prjs/account-user/user.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micro-k8s-user-deployment
  namespace: nginx-ingress
  labels:
    app: micro-k8s-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: micro-k8s-user
  template:
    metadata:
      labels:
        app: micro-k8s-user
    spec:
      containers:
        - name: accounts
          image: phamkhachoabk/micro-k8s-user:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: micro-k8s-user-service
  namespace: nginx-ingress
spec:
  selector:
    app: micro-k8s-user
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
